samples/_failures_safe/1761084360_ef29d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be53eeb6.c: In function ‘main’:
./samples/SAFE/__tmp_be53eeb6.c:153:27: error: expected ‘;’ at end of input
  153 |                     printf
      |                           ^
      |                           ;
./samples/SAFE/__tmp_be53eeb6.c:153:21: error: expected declaration or statement at end of input
  153 |                     printf
      |                     ^~~~~~
./samples/SAFE/__tmp_be53eeb6.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be53eeb6.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be53eeb6.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be53eeb6.c:153:21: error: expected declaration or statement at end of input
